0.2.8
-----
1. Use pointer style for gid items, to indicate they are clickable.

0.2.7
-----
1. Fix 'Random Albums' icon when using categories from server.
2. Fix SVG icon sizes.
3. Fix radio browsing - don't treat items with 'addAction' and no type as 'text'
4. Fix large pin icon when browsing radio.

0.2.6
-----
 1. Fix pin icon missing from menus.
 2. Use radio URL as its ID when pinning.
 3. Allow all radio sections to be pinned.
 4. Limit text (album, or artist) in grid to 80 characters, and add '...' if
    longer.
 5. Show volume level under button in mobile toolbar.
 6. Show 'More' action in more cases.
 7. Fix double-presses occurring on volume buttons with touch devices.
 8. Fix restoring command when go back.
 9. Only check for wide layout if landscape - otherwise controls are sometimes
    missing.
10. Respect 'nextWindow' when clicking on a 'text' action.
11. Darker bottom navbar for dark mobile layout.
12. Semi-transparent time progress background.
13. If group players plugin is not enabled, then add 'Synchronise' to players
    menu in toolbar.
14. Use same font-size for browse header entries ('My Music', etc) as for
    regular items.
15. Try to add consistent padding to dialogs.
16. In light style, make list icons as dark as menu icons.
17. Add icons for random albums, random mix, and dynamic playlists.

0.2.5
-----
1. Use a pin icon for pin/unpin actions.
2. Allow 'My Music', etc, to be collapsed.
3. Add dynamic playlists entry to menus.
4. Move player controls in mobile now-playing if very wide.
5. Add toolbar button in desktop layout to show large now-playing info (same as
   mobile layout).
6. Fix info icon changing to play/pause in mobile layout when info shown.
7. When setting progress bar position, check that current song duration and time
   are not 'undefined'

0.2.4
-----
1. Fix position of play/pause and stop button in mobile layout when stop button
   is enabled.
2. Landscape layout for mobile now playing.